datageneratordash-k8s/datageneratordash-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: datageneratordash
  labels:
    app: datageneratordash
spec:
  containers:
  - image: barteks/datageneratorapp
    name: datagenerator
    args: ["--data_path=/var/datasink/data.json"]
    volumeMounts:
    - name: datasource
      mountPath: /var/datasink
  - name: dashboard
    image: barteks/datagenerateddashboard
    args: ["--data_path=/var/datasource/data.json"]
    ports:
    - name: httpflask
      containerPort: 80
      protocol: TCP
    volumeMounts:
    - name: datasource
      mountPath: /var/datasource
      readOnly: true
  volumes:
  - name: datasource
    emptyDir: {}
