datageneratordash-k8s/datageneratordash-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: datageneratordash-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: httpflask
  selector:
    app: datageneratordash
